--- a/assets/css/just-the-docs-light.css
+++ b/assets/css/just-the-docs-light.css
@@ -468,7 +468,7 @@ body { position: relative; padding: 0px; margin: 0px; overflow-y: scroll; }
 
 .main-content li .highlight { margin-top: 0.25rem; }
 
-.main-content ol { list-style-type: none; counter-reset: step-counter; }
+.main-content ol { counter-reset: step-counter; }
 
 .main-content ol > li { position: relative; }
 
@@ -668,7 +668,7 @@ h4.top-code-caption { font-size: 14px; }
 
 button.copy { font-size: 12px; line-height: 26px; }
 
-code.highlighter-rouge { padding: 2px 10px 0px 10px; font-size: 14px; }
+code.highlighter-rouge { padding: 2px; font-size: 14px; }
 
 .heart { font-size: 50px; }
 
@@ -1865,5 +1865,7 @@ button.copy.copied { opacity: 0.9 !important; }
 div.info { font-weight: bold; background-color: #c4e1ff !important; margin-top: 10px !important; }
 
 .info pre.highlight code { background-color: inherit !important; }
+
+ol#markdown-toc li { list-style-type: none; }
 
 /*# sourceMappingURL=just-the-docs-light.css.map */
